swagger.yaml updated, values are changed
